welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: ')' expected but ';' found.
if(estFaceMur();){
               ^Program:2: error: illegal start of statement
if(estFaceMur();){
                ^