welcome.lessons.welcome.conditions.Conditions.scala.code
estFaceMur();
if(estFaceMur();){
	aFaireSivraie(recule();)
	
	}
